styling changed to prevent useless scrollbars

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,14 +7,12 @@ body {
 .App {
     margin: auto;
     width: 90vw;
-    height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .navbar {
     background-color: #403f4c;
     padding: 1rem;
-    width: 100vw;
     display: flex;
     align-items: center;
 }
